--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Project: Part 3</title>
 	<meta charset="utf-8">
-	<link rel=”stylesheet” href=”styles.css”>
-	<title>Bear</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div id=“content”>
+	<div id="content">
 		<header>
-			<h1>Best</h1>
+			<h1>Online Learning</h1>
 		</header>
-	<nav id=”main-nav”>
-		<h1>Best Website Ever<h1>
-	</main>
-		<p>&copy; My copywrite</p>
+		<nav id="main-nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="quiz.html">Quiz</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+		</nav>
+		<main>
+			<img src="images/online.jpg" class="center">
+			<h2>Don't Limit Yourself to Learning</h2>
+				<p id="see">Many times people often limit themselves by not being sure of their success. Everyone has a great potential but don't know it because they fear failure and as a result don't approach new things. This is no way to live. Everyone is equally gifted and it's all a matter of choice and initiative. The only way to become the best version of ourselves is to stop limiting yourself and just do the things you like.</p>
+				<p id="show" class="hidden">As you decide to stop limiting yourself and do the things you want to do, you will see that you will have even bigger goals. Doing and completing goals will lead you to want to achieve even bigger things in life. As a result of believing in yourself, you will be able to develop more abilities that will be worth your while. Improving your weaknesses will turn into strengths like you would never imagine before. You will gain knowledge and experience in new areas that will greatly enhance you learning. Living in the present moment and taking initiative will let you experience joy and happiness in the things you have complete and how far you have come. One of the best ways to inspire others is to do something grand in your life. You can become a role model for those who also struggle with limiting themselves. Become that motivation that others need.</p>
+				<a href="#" id="name" onclick="seeMore()">See More</a>
+			<h2>Benefits of Online Learning</h2>
+				<p id="see-two">Online learning  can help you thrive both personally and academically by helping you complete your goals. There are many advantages to online learning which is why you should really consider it! First, you do not need to relocate. Online learning is achieved through online classes. So, you do not need to move to a different city or state to begin learning. You can stay where you are and keep your lifestyle just as it is. Second, you can do things at your own pace. Some classes may require specific times to meet online but if you enroll in an asynchronous class you can do your work and study at any time. Whether you decided to be a part-time or full-time online student, the online learning experience allows for a much more flexible schedule.</p>
+				<p id="show-two" class="hidden">Third, online learning can help you develop healthy habits. Being in control of your daily schedule gives you the opportunity to also go out and do other things you enjoy doing. You can go out for a run, eat lunch with friends, or even join a yoga class. Studying at home gives you more time to focus on self-care. This can help boost your confidence and emotional intelligence! Lastly, taking classes online can reduce your stress! Who doesn't want that? Learning at your own pace, participating in ways that feel more comfortable, and not having an arduous commute can help you limit your stress.</p>
+				<a href="#" id="name-two" onclick="seeMoree()">See More</a>
+
+		
+			<h3 class="slideshow-containers">SlideShow</h3>
+			<div class="slideshow-container" style="max-width:500px">
+				<img src="images/IMG_3610.jpg" class="mySlides" style="width:100%">
+				<img src="images/IMG_2430.jpg" class="mySlides" style="width:100%">
+				<img src="images/IMG_2499.jpg" class="mySlides" style="width:100%">
+				<img src="images/IMG_7921.jpg" class="mySlides" style="width:100%">
+			</div>
+			<div id="video">
+				<h2>What I learned from Computer Science</h2>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/jbw9RApIZKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</main>
+		<footer>
+			<p>&copy;My copywrite</p>
+		</footer>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
